Version 17.38 - 16 June 2016

- partionning:
  o fix offering to create a GRUB_BIOS partition in custom mode (mga#18656)
  o fix inverted test when checking need for a GRUB_BIOS partition (mga#18704)

Version 17.37 - 12 June 2016

- partionning:
  o try harder to guess if we need a GRUB_BIOS partition (mga#18656)
- rename desktop image KDE -> Plasma (mga#18687)

Version 17.36.1 - 11 June 2016

- fix selecting Plasma (mga#18687)

Version 17.36 - 11 June 2016

- do not override bootloader on upgrade (mga#18638)
- fix running with nss 3.24
- debug build:
  o gdb needs python3 instead of python2 (and guile as well)
- partionning:
  o add a GRUB_BIOS partition if needed (mga#18656)
  o MBR limit really is 2TiB, not 4, so use GPT for disks > 2TiB

Version 17.35.1 - 7 June 2016

- fix selecting grub2 on !UEFI

Version 17.35 - 7 June 2016

- fix selecting grub2-efi on UEFI (mga#18646)

Version 17.34.1 - 6 June 2016

- fix displaying release notes with WebKit2

Version 17.34 - 6 June 2016

- bootloader:
  o enable to (un)install os-prober (mga#16010, mga#18538)
  o fix reading back last grub2 entry
  o only overwrite GRUB_CMDLINE_LINUX_DEFAULT on first install (mga#18112)
  o only overwrite install.sh when actually installing boot loader (mga#17455)
  o set GRUB_DEFAULT + GRUB_SAVEDEFAULT (mga#9627, mga#16059)
  o stop offering grub legacy & lilo on new installs (mga#18583)

Version 17.33 - 27 May 2016

- adjust to latest gdb
- list all drivers needing a proprietary driver
- only use vesa on x86

Version 17.32 - 17 May 2016

- remove KDE occurrence after revert of the previous commit

Version 17.31 - 9 May 2016

- replace last KDE occurence with Plasma
- left background for sta1
- list all drivers needing a proprietary driver
- install the right IM packages on Plasma when using fcitx

Version 17.30 - 7 May 2016

- install nonfree firmware for amdgpu, i915, nouveau
- CSD:
  o make corners round like gtk+/Adwaita does
  o nicer decoration

Version 17.29 - 4 May 2016
