@@ -1,3 +1,6 @@
+- services:
+  o update service category lists
+
 Version 17.38 - 16 June 2016
 
 - partionning:
